replacing alt in Html

--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
         <div class="shelf">
           <img
             src="img/wine.png"
-            alt="Товар 1"
+            alt="Вино"
             class="item"
             id="item1"
             draggable="true"
           />
           <img
             src="img/milk.png"
-            alt="Товар 2"
+            alt="Молоко"
             class="item"
             id="item2"
             draggable="true"
           />
           <img
             src="img/jam.png"
-            alt="Товар 3"
+            alt="Джем"
             class="item"
             id="item3"
             draggable="true"
           />
           <img
             src="img/cheese.png"
-            alt="Товар 4"
+            alt="Сыр"
             class="item"
             id="item4"
             draggable="true"
@@ -42,21 +42,21 @@
         <div class="shelf">
           <img
             src="img/meat.png"
-            alt="Товар 5"
+            alt="Мясо"
             class="item"
             id="item5"
             draggable="true"
           />
           <img
             src="img/leg.png"
-            alt="Товар 6"
+            alt="Ножка"
             class="item"
             id="item6"
             draggable="true"
           />
           <img
             src="img/chips.png"
-            alt="Товар 7"
+            alt="Чипсы"
             class="item"
             id="item7"
             draggable="true"
@@ -65,28 +65,28 @@
         <div class="shelf">
           <img
             src="img/pineapple.png"
-            alt="Товар 8"
+            alt="Ананас"
             class="item"
             id="item8"
             draggable="true"
           />
           <img
             src="img/banana.png"
-            alt="Товар 9"
+            alt="Банан"
             class="item"
             id="item9"
             draggable="true"
           />
           <img
             src="img/apple.png"
-            alt="Товар 10"
+            alt="Яблоко"
             class="item"
             id="item10"
             draggable="true"
           />
           <img
             src="img/salad.png"
-            alt="Товар 11"
+            alt="Салат"
             class="item"
             id="item11"
             draggable="true"
